# try-qr-format-check

./: check.py  pyproject.toml
