[tool.poetry]
name = "try-qr-format-check"
version = "0.1.0"
description = ""
authors = ["ryuta46 <ryuta46g@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
PyQRCode = "^1.2.1"
pypng = "^0.0.21"
python-barcode = "^0.13.1"
pyzbar = "^0.1.8"
Pillow = "^8.4.0"
opencv-python = "^4.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
